--- a/SDL_Test/SDL_Test.vcxproj.filters
+++ b/SDL_Test/SDL_Test.vcxproj.filters
@@ -44,6 +44,12 @@
     <ClInclude Include="src\TileMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ECS.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Components.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Desktop\School Work\space.png">
