--- a/SDL_Test/SDL_Test.vcxproj.filters
+++ b/SDL_Test/SDL_Test.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="src\text.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\AttackAnim.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\text.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\AttackAnim.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
